--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ python:
   - "3.7"
   - "3.8"
 install:
- - pip install pylama 
+ - pip install pylama mypy
  - pip install -e .
 script:
  - pylama ttls
+ - mypy -m ttls.client
+ - mypy -m ttls.cli
 notifications:
   email: true
