--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: python
+cache: pip
 python:
-  - "3.7"
-  - "3.8"
+  - '3.7'
+  - '3.8'
+  - '3.9'
+before_install:
+  - pip install poetry
 install:
- - pip install pylama mypy
- - pip install -e .
+  - poetry install
 script:
- - pylama ttls
- - mypy -m ttls.client
+  - poetry run pylama ttls
+  - poetry run isort --check ttls
+  - poetry run black --check ttls
 notifications:
-  email: true
+  email: false
