--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ black = "^22.10.0"
 isort = "^5.10.1"
 pytest-black = "^0.3.12"
 pytest-isort = "^3.1.0"
+aiounittest = "^1.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
