--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,20 +3,7 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
-  pre_job:
-    runs-on: ubuntu-latest
-    outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
-    steps:
-      - id: skip_check
-        uses: fkirc/skip-duplicate-actions@master
-        with:
-          do_not_skip: '["pull_request"]'
-          cancel_others: 'true'
-          concurrent_skipping: same_content
   test:
-    needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,24 +17,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Get full python version
-        id: full-python-version
-        run: |
-          echo version=$(python -c "import sys, platform; print('.'.join(str(v) for v in sys.version_info[:3]) + '_' + platform.machine())") >> $GITHUB_OUTPUT
-      - name: Set up cache
-        uses: actions/cache@v3
-        with:
-          path: .venv
-          key: ${{ runner.os }}-venv-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Install and configure Poetry
-        run: |
-          pip install poetry
-          poetry config virtualenvs.in-project true
       - name: Install dependencies
         run: poetry install
-      - name: Lint
-        run: |
-          poetry run pylama ttls
       - name: Pytest
         run: |
-          poetry run pytest --isort --black
+          poetry run pytest --isort --black --pylama
