--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install and configure Poetry
+        run: |
+          pip install poetry
+          poetry config virtualenvs.in-project true
       - name: Install dependencies
         run: poetry install
       - name: Pytest
