--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,4 @@ jobs:
         run: poetry install
       - name: Pytest
         run: |
-          poetry run pytest --isort --black --pylama
+          poetry run pytest --ruff --ruff-format
