--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,14 @@ name: Tests
 on: [push, pull_request]
 
 jobs:
+  ruff:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: chartboost/ruff-action@v1  
   test:
     runs-on: ubuntu-latest
+    needs: ruff
     strategy:
       matrix:
         python-version:
@@ -13,7 +19,7 @@ jobs:
           - "3.11"
           - "3.12"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -26,4 +32,4 @@ jobs:
         run: poetry install
       - name: Pytest
         run: |
-          poetry run pytest --ruff --ruff-format
+          poetry run pytest
