--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ name = "ttls"
 version = "1.8.2"
 description = "Twinkly Twinkly Little Star"
 authors = ["Jakob Schlyter <jakob@schlyter.se>"]
-license = "BSD"
+license = "BSD-2-Clause"
 readme = "README.md"
 repository = "https://github.com/jschlyter/ttls"
 
