--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,17 +19,17 @@ colour = "^0.1.5"
 aiohttp = "^3.8.5"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.2"
+pytest = "^8"
 aiounittest = "^1.4.2"
-ruff = "^0.4.8"
-pytest-ruff = "^0.3.2"
+ruff = "^0.6.9"
+pytest-ruff = "^0.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.isort]
-profile = "black"
+[tool.ruff]
+line-length = 120
 
 [tool.ruff.lint]
 select = [
