--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ repository = "https://github.com/jschlyter/ttls"
 ttls = "ttls.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 aiohttp = "^3.8.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
 aiounittest = "^1.4.2"
-ruff = "^0.6.9"
+ruff = ">=0.8.1"
 pytest-ruff = "^0.4.1"
 
 [build-system]
