--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,4 +37,4 @@ jobs:
         version: latest
         enable-cache: false
     - name: Run pytest
-      run: make test
+      run: uv run pytest
